# olmo_sft

./: .gitignore  DATA_CARD.md  MODEL_CARD.md  README.md  build_dataset.py  config_docling_ocr.md  data_engineering_spec.md  deduplicate_dataset.py  evaluate.py  generate_golden_eval.py  late_chunking.md  merge_model.py  model_utils.py  olmo.ipynb  pdf_extractor.py  pipeline_cache.py  provider_utils.py  pyproject.toml  runpod_setup.sh  sft_plan.md  teacher_model_synthesis.py  train_dpo.py  train_sft.py
doctune/: README.md
doctune/data/extraction/: pdf_extractor.py
doctune/data/pipeline/: README.md  build_dataset.py  pipeline_utils.py
doctune/data/synthesis/: README.md  __init__.py  deduplicate_dataset.py  diversity_selector.py  late_chunker.py  report_synthesis_spend.py  teacher_model_synthesis.py
doctune/training/: README.md  train_dpo.py  train_sft.py  training_utils.py
doctune/utils/: README.md  __init__.py  pricing.py  provider_utils.py
setup/: local_setup.sh  runpod_setup.sh
