[project]
name = "doctune"
version = "0.2.0"
description = "End-to-end pipeline for domain-adapting any HuggingFace causal LM on PDF document corpora using SFT + DPO"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Felipe Kuhne" },
]
dependencies = [
    "openai>=1.66,<2.0",
    "anthropic>=0.40,<1.0",
    "pydantic>=2.7,<3.0",
    "huggingface_hub[hf_xet]>=0.30,<1.0",
    "sentence-transformers>=3.0,<4.0",
    "docling>=2.30,<3.0",
    "torch>=2.3,<3.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.6,<3.0",
    "torchvision>=0.21,<1.0",
    "torchaudio>=2.6,<3.0",
]
training = [
    "transformers>=4.48,<5.0",
    "peft>=0.13,<1.0",
    "trl>=0.12,<1.0",
    "accelerate>=1.0,<2.0",
    "datasets>=3.0,<4.0",
    "bitsandbytes>=0.44,<1.0",
    "flash-attn>=2.6,<3.0; sys_platform != 'darwin'",
    "mlflow>=2.16,<3.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
    "pylint>=3.0,<4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "generate_golden_eval",
    "teacher_model_synthesis",
    "train_sft",
    "merge_model",
    "train_dpo",
    "pdf_extractor",
    "evaluate",
    "build_dataset",
    "deduplicate_dataset",
    "model_utils",
    "provider_utils"
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
